; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_rootstore.c_reset_buffer.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_rootstore.c_reset_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.DynamicBuffer = type { i64*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.DynamicBuffer*)* @reset_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reset_buffer(%struct.DynamicBuffer* %0) #0 {
  %2 = alloca %struct.DynamicBuffer*, align 8
  store %struct.DynamicBuffer* %0, %struct.DynamicBuffer** %2, align 8
  %3 = load %struct.DynamicBuffer*, %struct.DynamicBuffer** %2, align 8
  %4 = getelementptr inbounds %struct.DynamicBuffer, %struct.DynamicBuffer* %3, i32 0, i32 1
  store i64 0, i64* %4, align 8
  %5 = load %struct.DynamicBuffer*, %struct.DynamicBuffer** %2, align 8
  %6 = getelementptr inbounds %struct.DynamicBuffer, %struct.DynamicBuffer* %5, i32 0, i32 0
  %7 = load i64*, i64** %6, align 8
  %8 = icmp ne i64* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load %struct.DynamicBuffer*, %struct.DynamicBuffer** %2, align 8
  %11 = getelementptr inbounds %struct.DynamicBuffer, %struct.DynamicBuffer* %10, i32 0, i32 0
  %12 = load i64*, i64** %11, align 8
  %13 = getelementptr inbounds i64, i64* %12, i64 0
  store i64 0, i64* %13, align 8
  br label %14

14:                                               ; preds = %9, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
